[package]
name = "sledoview"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "A CLI tool for viewing and managing SLED databases"
license = "MIT"
repository = "https://github.com/yourusername/sledoview"
readme = "README.md"
keywords = ["sled", "database", "cli", "viewer"]
categories = ["command-line-utilities", "database"]

[[bin]]
name = "sledoview"
path = "src/main.rs"

[lib]
name = "sledoview"
path = "src/lib.rs"

[dependencies]
sled = "0.34"
clap = { version = "4.0", features = ["derive"] }
colored = "2.0"
anyhow = "1.0"
rustyline = "13.0"
regex = "1.0"
glob = "0.3"
thiserror = "1.0"

[dev-dependencies]
tempfile = "3.0"
assert_cmd = "2.0"
predicates = "3.0"
